<!-- Guides
https://developer.android.com/guide/topics/resources/string-resource.html
https://developer.android.com/guide/topics/resources/localization.html
-->
<resources>
    <string name="app_name">Sternenkrieg</string>
    <string name="service_id">Sternenkrieg</string>
    <string name="sk_label">Sternenkrieg</string>

    <string name="connection_type">Host/Client</string>
    <string name="connection_type_host">Host</string>
    <string name="connection_type_client">Client</string>

    <string name="about">About us</string>
    <string name="aboutGame">Rebel Art Studios, University Project Group. \nChristiann Bauer, Lukas Pagitz, Anja Ressmann, Christoph Roither, Boda Wen.</string>
    <string name="dice">Dice</string>
    <string name="highscore">Highscore</string>
    <string name="options">Options</string>
    <string name="play">Play</string>
    <string name="playSound">Play Sound</string>
    <string name="send">Send</string>
    <string name="sound">Sound</string>
    <string name="status">Deaktiviert</string>

    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>

    <string name="You">You</string>
    <string name="Enemy">Enemy</string>
    <string name="placeShips">Place your ships!</string>

    <string name="bg_desc">Background</string>
    <string name="logo_desc">Sternenkrieg Logo</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="generate_qr">Generate QR</string>
    <string name="nicht_verbunden">Not connected</string>
    <string name="start_verbinden">Start connection</string>
    <string name="send_message">Send Message</string>
    <string name="verbindung_abbrechen">Abort connection</string>
    <string name="qr_code">QR Code</string>

    <string name="de">Deutsch</string>
    <string name="en">English</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
