<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundmenue"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textconnected"
        android:layout_width="545dp"
        android:layout_height="38dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="71dp"
        android:hint="@string/nicht_verbunden"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />


    <EditText
        android:id="@+id/IPet"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="27dp"
        android:hint="10.0.2.2"
        android:text="192.168.8.103"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btnStart"
        app:layout_constraintTop_toBottomOf="@+id/textconnected"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1" />


    <Button
        android:id="@+id/btnStart"
        android:layout_width="257dp"
        android:layout_height="46dp"
        android:text="@string/start_verbinden"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@+id/textconnected"
        android:background="@color/colorPrimary"
        android:textSize="20sp"
        android:textColor="@color/common_signin_btn_dark_text_default"
        android:layout_marginLeft="212dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.93" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/verbindung_abbrechen"
        android:id="@+id/btnStop"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/btnStart"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/btnStart"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="156dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnStart"
        app:layout_constraintVertical_bias="0.0"
        android:background="@color/colorPrimary"
        android:textSize="20sp"
        android:textColor="@color/common_signin_btn_dark_text_default"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qr_code"
        android:id="@+id/QRClient"
        android:onClick="onClickQR"
        tools:layout_conversion_absoluteX="484dp"
        tools:layout_conversion_absoluteY="199dp"
        tools:layout_conversion_absoluteWidth="88dp"
        tools:layout_conversion_absoluteHeight="48dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/btnStop"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/btnStop"
        android:background="@color/colorPrimary"
        android:textSize="20sp"
        android:textColor="@color/common_signin_btn_dark_text_default"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/btnStop" />


    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="Client"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/textconnected"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageClientBack"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.007"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/back" />


</android.support.constraint.ConstraintLayout>
