<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rebelartstudios.sternenkrieg.Options"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp">

    <Button
        android:id="@+id/btn_namechanger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Change Name"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintLeft_toRightOf="@+id/textViewName"
        android:layout_marginLeft="8dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline3"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.731"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        android:layout_marginTop="126dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/sound"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toLeftOf="@+id/soundButton"
        android:layout_marginRight="8dp" />

    <ToggleButton
        android:id="@+id/soundButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/sound"
        app:layout_constraintRight_toLeftOf="@+id/textViewStatus"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.501"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewName"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:layout_marginEnd="59dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline3"
        android:layout_marginRight="51dp"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_namechanger"
        app:layout_constraintVertical_bias="0.182"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="1.0" />

    <Button
        android:id="@+id/buttonPlaySound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playSound"
        app:layout_constraintTop_toBottomOf="@+id/soundButton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.038"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline4"
        app:layout_constraintRight_toLeftOf="@+id/guideline3"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/options"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.948"
        app:srcCompat="@drawable/arrow_left2"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Current name:"
        android:layout_marginTop="101dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewSound"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline4"
        app:layout_constraintRight_toLeftOf="@+id/guideline3"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.035" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="null"
        android:layout_marginStart="41dp"
        app:layout_constraintLeft_toRightOf="@+id/textView5"
        android:layout_marginLeft="42dp"
        android:layout_marginBottom="115dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline3"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline3"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="533dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline4"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="59dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline5"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"
        tools:layout_editor_absoluteY="67dp"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Language"
        android:layout_marginTop="78dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintRight_toLeftOf="@+id/guideline3"
        android:layout_marginRight="379dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="1.0" />

    <Spinner
        android:id="@+id/spinnerLanguage"
        android:layout_width="139dp"
        android:layout_height="31dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintLeft_toRightOf="@+id/textView7"
        app:layout_constraintRight_toLeftOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/btn_namechanger"
        app:layout_constraintVertical_bias="0.782" />
</android.support.constraint.ConstraintLayout>
